...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/talking_jelly_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:goneIfNotNull="@{viewModel.timeAndDays}"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/hour_item" />

    </FrameLayout>

...
