...
                android:text="@{location.title}"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:drawablePadding="8dp"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/delete_button"
                android:padding="8dp"/>

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"
                android:onClick="@{() -> deleteLocationCallback.onDelete(location)}"
                />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{location.locationString}"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
