...
                android:drawableStart="@drawable/ic_temp_image"
                style="@style/DefaultTextAppearance"
                android:visibility="gone"
                />

            <TextView
                android:id='@+id/temperature_textview'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@{viewModel.weatherForecast.airTemperatureText}"
                android:drawableStart="@drawable/ic_thermometer"
                style="@style/DefaultTextAppearance"
...
